k8s/10-cockroachdb.yaml
apiVersion: v1
kind: Service
metadata:
  name: cockroachdb
  namespace: ecommerce-ms
spec:
  selector:
    app: cockroachdb
  ports:
    - name: sql
      port: 26257
      targetPort: 26257
    - name: http
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: cockroachdb
  namespace: ecommerce-ms
spec:
  serviceName: "cockroachdb"
  replicas: 1
  selector:
    matchLabels:
      app: cockroachdb
  template:
    metadata:
      labels:
        app: cockroachdb
    spec:
      terminationGracePeriodSeconds: 60
      containers:
        - name: cockroach
          image: cockroachdb/cockroach:latest
          imagePullPolicy: IfNotPresent
          args: ["start-single-node", "--insecure", "--http-addr=0.0.0.0:8080", "--sql-addr=0.0.0.0:26257", "--store=/cockroach/cockroach-data"]
          ports:
            - name: sql
              containerPort: 26257
            - name: http
              containerPort: 8080
          volumeMounts:
            - name: data
              mountPath: /cockroach/cockroach-data
          readinessProbe:
            exec:
              command: ["bash", "-lc", "cockroach sql --insecure --execute='SELECT 1' --host=localhost:26257"]
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            exec:
              command: ["bash", "-lc", "cockroach sql --insecure --execute='SELECT 1' --host=localhost:26257"]
            initialDelaySeconds: 30
            periodSeconds: 20
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 5Gi
