k8s/80-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-ingress
  namespace: ecommerce-ms
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /auth(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: auth
                port:
                  number: 8082
          - path: /orders(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: order
                port:
                  number: 8083
          - path: /products(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: product
                port:
                  number: 8084
